# haskell-ch14

WordNumber/: README.md  WordNumber.cabal
WordNumber/app/: Main.hs
WordNumber/src/: WordNumber.hs
addition/: Addition.hs  addition.cabal
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
